--- a/config_android.json
+++ b/config_android.json
@@ -5,37 +5,65 @@
     "timestamp": true
   },
 
-"experimental": {
-  "cache_file": {
-    "enabled": true
+  "experimental": {
+    "cache_file": {
+      "enabled": true
     }
   },
 
   "dns": {
     "servers": [
-      {"tag": "proxyDns", "address": "https://dns.google/dns-query", "address_resolver": "defaultDns", "address_strategy": "ipv4_only", "detour": "🚀 节点选择"},
-      {"tag": "localDns", "address": "223.5.5.5", "address_resolver": "defaultDns", "address_strategy": "ipv4_only", "detour": "🎯 全球直连"},
-      {"tag": "defaultDns", "address": "223.5.5.5", "address_strategy": "ipv4_only", "detour": "🎯 全球直连"}
+      {
+        "tag": "dns_direct",
+        "address": "223.5.5.5",
+        "address_strategy": "ipv4_only",
+        "strategy": "ipv4_only",
+        "detour": "🎯 全球直连"
+      },
+      {
+        "tag": "dns_proxy",
+        "address": "tls://8.8.8.8",
+        "address_strategy": "ipv4_only",
+        "strategy": "ipv4_only",
+        "detour": "🚀 节点选择"
+      }
     ],
     "rules": [
-      { "outbound": "any", "server": "defaultDns", "disable_cache": true },
-      { "clash_mode": "direct", "server": "localDns" },
-      { "clash_mode": "global", "server": "proxyDns" },
-      { "rule_set": "geosite-cn", "server": "localDns" },
-      { "rule_set": "geosite-geolocation-!cn", "server": "proxyDns" }
+      { "outbound": "any", "server": "dns_direct", "disable_cache": true },
+      { "clash_mode": "Direct", "server": "dns_direct" },
+      { "clash_mode": "Global", "server": "dns_proxy" },
+      { "rule_set": "geosite-cn", "action": "route", "server": "dns_direct" },
+      { "rule_set": "geosite-geolocation-!cn", "server": "dns_proxy" }
     ],
-    "final": "localDns",
+    "final": "dns_proxy",
     "strategy": "ipv4_only"
   },
 
-"inbounds": [
-  {
-    "type": "tun",
-    "address": "172.19.0.1/30",
-    "mtu": 9000,
-    "auto_route": true
-  }
-],
+  "inbounds": [
+    {
+      "type": "tun",
+      "address": "172.19.0.1/30",
+      "mtu": 9000,
+      "auto_route": true,
+      "auto_redirect": true,
+      "strict_route": true,
+      "stack": "system",
+      "platform": {
+        "http_proxy": {
+          "enabled": true,
+          "server": "127.0.0.1",
+          "server_port": 2080
+        }
+      }
+    },
+    {
+      "type": "mixed",
+      "listen": "127.0.0.1",
+      "listen_port": 2080,
+      "sniff": true,
+      "users": []
+    }
+  ],
 
   "outbounds": [
     {
@@ -322,12 +350,8 @@
     "auto_detect_interface": true,
     "final": "🐠 漏网之鱼",
     "rules": [
-      {
-        "type": "logical",
-        "mode": "or",
-        "rules": [{ "port": 53 }, { "protocol": "dns" }],
-        "outbound": "dns-out"
-      },
+      { "action": "sniff" },
+      { "protocol": "dns", "action": "hijack-dns" },
       { "clash_mode": "direct", "outbound": "🎯 全球直连" },
       { "clash_mode": "global", "outbound": "GLOBAL" },
       {
@@ -339,29 +363,26 @@
         ],
         "outbound": "🎯 全球直连"
       },
-      {
-        "rule_set": ["geosite-private", "geoip-private"],
-        "outbound": "🎯 全球直连"
-      },
+      { "rule_set": "geosite-private", "outbound": "🎯 全球直连" },
       { "rule_set": "geosite-chat", "outbound": "🤖 OpenAI" },
-      { "rule_set": "geosite-github", "outbound": "👨‍💻 Github" },
       { "rule_set": "geosite-youtube", "outbound": "📹 YouTube" },
-      { "rule_set": "geosite-onedrive", "outbound": "🐬 OneDrive" },
-      { "rule_set": "geosite-microsoft", "outbound": "🪟 Microsoft" },
+      { "rule_set": "geosite-github", "outbound": "👨‍💻 Github" },
       {
-        "rule_set": ["geoip-google", "geosite-google"],
+        "rule_set": ["geosite-google", "geoip-google"],
         "outbound": "🍀 Google"
       },
-      { "rule_set": "geosite-tiktok", "outbound": "🎵 TikTok" },
-      { "rule_set": ["geoip-apple", "geosite-apple"], "outbound": "🍏 Apple" },
       {
-        "rule_set": ["geoip-netflix", "geosite-netflix"],
-        "outbound": "🎥 Netflix"
-      },
-      {
-        "rule_set": ["geoip-telegram", "geosite-telegram"],
+        "rule_set": ["geosite-telegram", "geoip-telegram"],
         "outbound": "📲 Telegram"
       },
+      { "rule_set": "geosite-tiktok", "outbound": "🎵 TikTok" },
+      {
+        "rule_set": ["geosite-netflix", "geoip-netflix"],
+        "outbound": "🎥 Netflix"
+      },
+      { "rule_set": ["geosite-apple", "geoip-apple"], "outbound": "🍏 Apple" },
+      { "rule_set": "geosite-onedrive", "outbound": "🐬 OneDrive" },
+      { "rule_set": "geosite-microsoft", "outbound": "🪟 Microsoft" },
       { "rule_set": "geosite-geolocation-!cn", "outbound": "🚀 节点选择" },
       { "rule_set": ["geoip-cn", "geosite-cn"], "outbound": "🎯 全球直连" }
     ],
